# unispim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.txt  installer.iss  installerd.iss
project/: ime_install.vcxproj  unispim.vcxproj  wl_tool.vcxproj
resource/: unispim.rc
